# llamaparse-vs-docling

./: .env  README.md  docling_extract.py  llamaparse_extract.py  logger.py  pyproject.toml
output/Docling/: chunks.json  figures.json  full_document.json  full_document.md  images.json  table_1_page2.md  table_2_page3.md  table_3_page3.md  tables.json  texts.json
output/LlamaParse/: markdown.md  text.txt
utils/: decode_docling_images.py
